@@ -24,24 +24,20 @@ import static org.junit.Assert.assertThat;
 import static org.junit.Assume.assumeThat;
 
 import com.facebook.buck.config.FakeBuckConfig;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.InternalFlavor;
+import com.facebook.buck.core.rulekey.RuleKeyObjectSink;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.core.toolchain.tool.Tool;
+import com.facebook.buck.core.toolchain.tool.impl.CommandTool;
 import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
 import com.facebook.buck.cxx.toolchain.GccPreprocessor;
 import com.facebook.buck.cxx.toolchain.InferBuckConfig;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
-import com.facebook.buck.model.BuildTarget;
-import com.facebook.buck.model.UnflavoredBuildTarget;
-import com.facebook.buck.rules.BuildRuleResolver;
-import com.facebook.buck.rules.CommandTool;
-import com.facebook.buck.rules.DefaultSourcePathResolver;
-import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
+import com.facebook.buck.model.ImmutableBuildTarget;
+import com.facebook.buck.model.ImmutableUnflavoredBuildTarget;
+import com.facebook.buck.rules.FakeBuildRule;
 import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.RuleKeyObjectSink;
-import com.facebook.buck.rules.SingleThreadedBuildRuleResolver;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
-import com.facebook.buck.rules.SourcePathRuleFinder;
-import com.facebook.buck.rules.TargetGraph;
-import com.facebook.buck.rules.Tool;
 import com.facebook.buck.rules.args.RuleKeyAppendableFunction;
 import com.facebook.buck.rules.coercer.FrameworkPath;
 import com.facebook.buck.step.ExecutionContext;
@@ -61,17 +57,13 @@ import org.junit.Test;
 public class CxxCollectAndLogInferDependenciesStepTest {
 
   private static ProjectFilesystem createFakeFilesystem(String fakeRoot) {
-    final Path fakeRootPath = Paths.get(fakeRoot);
+    Path fakeRootPath = Paths.get(fakeRoot);
     Preconditions.checkArgument(fakeRootPath.isAbsolute(), "fakeRoot must be an absolute path");
     return new FakeProjectFilesystem(fakeRootPath);
   }
 
   private CxxInferCapture createCaptureRule(
-      BuildTarget buildTarget,
-      SourcePathResolver sourcePathResolver,
-      ProjectFilesystem filesystem,
-      InferBuckConfig inferBuckConfig)
-      throws Exception {
+      BuildTarget buildTarget, ProjectFilesystem filesystem, InferBuckConfig inferBuckConfig) {
     class FrameworkPathAppendableFunction
         implements RuleKeyAppendableFunction<FrameworkPath, Path> {
       @Override
@@ -92,15 +84,15 @@ public class CxxCollectAndLogInferDependenciesStepTest {
 
     PreprocessorDelegate preprocessorDelegate =
         new PreprocessorDelegate(
-            sourcePathResolver,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
             CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
-            Paths.get("whatever"),
+            FakeSourcePath.of("whatever"),
             new GccPreprocessor(preprocessorTool),
             PreprocessorFlags.builder().build(),
             defaultFrameworkPathSearchPathFunction,
             Optional.empty(),
-            /* leadingIncludePaths */ Optional.empty());
+            /* leadingIncludePaths */ Optional.empty(),
+            Optional.of(new FakeBuildRule(buildTarget.withFlavors(InternalFlavor.of("deps")))),
+            ImmutableSortedSet.of());
 
     return new CxxInferCapture(
         buildTarget,
@@ -111,7 +103,7 @@ public class CxxCollectAndLogInferDependenciesStepTest {
         FakeSourcePath.of("src.c"),
         AbstractCxxSource.Type.C,
         Optional.empty(),
-        Paths.get("src.o"),
+        "src.o",
         preprocessorDelegate,
         inferBuckConfig);
   }
@@ -124,8 +116,8 @@ public class CxxCollectAndLogInferDependenciesStepTest {
     ProjectFilesystem filesystem = createFakeFilesystem("/Users/user/src");
 
     BuildTarget testBuildTarget =
-        BuildTarget.of(
-            UnflavoredBuildTarget.of(
+        ImmutableBuildTarget.of(
+            ImmutableUnflavoredBuildTarget.of(
                 filesystem.getRootPath(), Optional.empty(), "//target", "short"),
             ImmutableSet.of(CxxInferEnhancer.InferFlavors.INFER.getFlavor()));
 
@@ -159,8 +151,8 @@ public class CxxCollectAndLogInferDependenciesStepTest {
     String cellName = "cellname";
 
     BuildTarget testBuildTarget =
-        BuildTarget.of(
-            UnflavoredBuildTarget.of(
+        ImmutableBuildTarget.of(
+            ImmutableUnflavoredBuildTarget.of(
                 filesystem.getRootPath(), Optional.of(cellName), "//target", "short"),
             ImmutableSet.of(CxxInferEnhancer.InferFlavors.INFER.getFlavor()));
 
@@ -192,29 +184,22 @@ public class CxxCollectAndLogInferDependenciesStepTest {
     // filesystem, buildTarget and buildRuleParams for first cell (analysis)
     ProjectFilesystem filesystem1 = createFakeFilesystem("/Users/user/cell_one");
     BuildTarget buildTarget1 =
-        BuildTarget.of(
-            UnflavoredBuildTarget.of(
+        ImmutableBuildTarget.of(
+            ImmutableUnflavoredBuildTarget.of(
                 filesystem1.getRootPath(), Optional.of("cell1"), "//target/in_cell_one", "short1"),
             ImmutableSet.of(CxxInferEnhancer.InferFlavors.INFER.getFlavor()));
 
     // filesystem, buildTarget and buildRuleParams for second cell (capture)
     ProjectFilesystem filesystem2 = createFakeFilesystem("/Users/user/cell_two");
     BuildTarget buildTarget2 =
-        BuildTarget.of(
-            UnflavoredBuildTarget.of(
+        ImmutableBuildTarget.of(
+            ImmutableUnflavoredBuildTarget.of(
                 filesystem2.getRootPath(), Optional.of("cell2"), "//target/in_cell_two", "short2"),
             ImmutableSet.of(CxxInferEnhancer.INFER_CAPTURE_FLAVOR));
 
-    BuildRuleResolver testBuildRuleResolver =
-        new SingleThreadedBuildRuleResolver(
-            TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    SourcePathResolver testSourcePathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(testBuildRuleResolver));
-
     InferBuckConfig inferBuckConfig = new InferBuckConfig(FakeBuckConfig.builder().build());
 
-    CxxInferCapture captureRule =
-        createCaptureRule(buildTarget2, testSourcePathResolver, filesystem2, inferBuckConfig);
+    CxxInferCapture captureRule = createCaptureRule(buildTarget2, filesystem2, inferBuckConfig);
 
     CxxInferAnalyze analyzeRule =
         new CxxInferAnalyze(
@@ -234,10 +219,8 @@ public class CxxCollectAndLogInferDependenciesStepTest {
 
     String expectedOutput =
         InferLogLine.fromBuildTarget(buildTarget1, analyzeRule.getAbsolutePathToResultsDir())
-                .toString()
             + "\n"
-            + InferLogLine.fromBuildTarget(buildTarget2, captureRule.getAbsolutePathToOutput())
-                .toString();
+            + InferLogLine.fromBuildTarget(buildTarget2, captureRule.getAbsolutePathToOutput());
 
     assertEquals(expectedOutput + "\n", filesystem1.readFileIfItExists(outputFile).get());
   }
@@ -249,29 +232,22 @@ public class CxxCollectAndLogInferDependenciesStepTest {
     // filesystem, buildTarget and buildRuleParams for first, unnamed cell (analysis)
     ProjectFilesystem filesystem1 = createFakeFilesystem("/Users/user/default_cell");
     BuildTarget buildTarget1 =
-        BuildTarget.of(
-            UnflavoredBuildTarget.of(
+        ImmutableBuildTarget.of(
+            ImmutableUnflavoredBuildTarget.of(
                 filesystem1.getRootPath(), Optional.empty(), "//target/in_default_cell", "short"),
             ImmutableSet.of(CxxInferEnhancer.InferFlavors.INFER.getFlavor()));
 
     // filesystem, buildTarget and buildRuleParams for second cell (capture)
     ProjectFilesystem filesystem2 = createFakeFilesystem("/Users/user/cell_two");
     BuildTarget buildTarget2 =
-        BuildTarget.of(
-            UnflavoredBuildTarget.of(
+        ImmutableBuildTarget.of(
+            ImmutableUnflavoredBuildTarget.of(
                 filesystem2.getRootPath(), Optional.of("cell2"), "//target/in_cell_two", "short2"),
             ImmutableSet.of(CxxInferEnhancer.INFER_CAPTURE_FLAVOR));
 
-    BuildRuleResolver testBuildRuleResolver =
-        new SingleThreadedBuildRuleResolver(
-            TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    SourcePathResolver testSourcePathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(testBuildRuleResolver));
-
     InferBuckConfig inferBuckConfig = new InferBuckConfig(FakeBuckConfig.builder().build());
 
-    CxxInferCapture captureRule =
-        createCaptureRule(buildTarget2, testSourcePathResolver, filesystem2, inferBuckConfig);
+    CxxInferCapture captureRule = createCaptureRule(buildTarget2, filesystem2, inferBuckConfig);
 
     CxxInferAnalyze analyzeRule =
         new CxxInferAnalyze(
@@ -291,10 +267,8 @@ public class CxxCollectAndLogInferDependenciesStepTest {
 
     String expectedOutput =
         InferLogLine.fromBuildTarget(buildTarget1, analyzeRule.getAbsolutePathToResultsDir())
-                .toString()
             + "\n"
-            + InferLogLine.fromBuildTarget(buildTarget2, captureRule.getAbsolutePathToOutput())
-                .toString();
+            + InferLogLine.fromBuildTarget(buildTarget2, captureRule.getAbsolutePathToOutput());
 
     assertEquals(expectedOutput + "\n", filesystem1.readFileIfItExists(outputFile).get());
   }
