@@ -31,6 +31,16 @@ import com.facebook.buck.android.AndroidPrebuiltAarBuilder;
 import com.facebook.buck.android.AndroidResourceDescriptionArg;
 import com.facebook.buck.config.BuckConfig;
 import com.facebook.buck.config.FakeBuckConfig;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.targetgraph.TargetNode;
+import com.facebook.buck.core.rules.BuildRuleResolver;
+import com.facebook.buck.core.rules.SourcePathRuleFinder;
+import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.PathSourcePath;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.core.sourcepath.SourceWithFlags;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
 import com.facebook.buck.cxx.CxxLibraryBuilder;
 import com.facebook.buck.ide.intellij.aggregation.AggregationMode;
 import com.facebook.buck.ide.intellij.model.DependencyType;
@@ -53,20 +63,8 @@ import com.facebook.buck.jvm.java.JavaLibraryBuilder;
 import com.facebook.buck.jvm.java.JavaTestBuilder;
 import com.facebook.buck.jvm.java.JvmLibraryArg;
 import com.facebook.buck.jvm.kotlin.FauxKotlinLibraryBuilder;
-import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.rules.BuildRuleResolver;
-import com.facebook.buck.rules.DefaultSourcePathResolver;
-import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
 import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.PathSourcePath;
-import com.facebook.buck.rules.SingleThreadedBuildRuleResolver;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
-import com.facebook.buck.rules.SourcePathRuleFinder;
-import com.facebook.buck.rules.SourceWithFlags;
-import com.facebook.buck.rules.TargetGraph;
-import com.facebook.buck.rules.TargetNode;
 import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.google.common.collect.ImmutableCollection;
 import com.google.common.collect.ImmutableMap;
@@ -569,7 +567,7 @@ public class DefaultIjModuleFactoryTest {
   }
 
   @Test
-  public void testOverrideSdk() throws Exception {
+  public void testOverrideSdk() {
     IjModuleFactory factory = createIjModuleFactory();
 
     Path moduleBasePath = Paths.get("java/com/example");
@@ -598,7 +596,7 @@ public class DefaultIjModuleFactoryTest {
   }
 
   @Test
-  public void testOverrideSdkFromBuckConfig() throws Exception {
+  public void testOverrideSdkFromBuckConfig() {
     IjModuleFactory factory = createIjModuleFactory();
 
     Path moduleBasePath = Paths.get("java/com/example");
@@ -628,12 +626,10 @@ public class DefaultIjModuleFactoryTest {
 
   @Test
   public void testAndroidPrebuiltAar() {
-    final SourcePath androidSupportBinaryPath =
-        FakeSourcePath.of("third_party/java/support/support.aar");
-    final Path androidSupportSourcesPath =
-        Paths.get("third_party/java/support/support-sources.jar");
-    final String androidSupportJavadocUrl = "file:///support/docs";
-    final TargetNode<?, ?> androidPrebuiltAar =
+    SourcePath androidSupportBinaryPath = FakeSourcePath.of("third_party/java/support/support.aar");
+    Path androidSupportSourcesPath = Paths.get("third_party/java/support/support-sources.jar");
+    String androidSupportJavadocUrl = "file:///support/docs";
+    TargetNode<?, ?> androidPrebuiltAar =
         AndroidPrebuiltAarBuilder.createBuilder(
                 BuildTargetFactory.newInstance("//third_party/java/support:support"))
             .setBinaryAar(androidSupportBinaryPath)
@@ -641,10 +637,8 @@ public class DefaultIjModuleFactoryTest {
             .setJavadocUrl(androidSupportJavadocUrl)
             .build();
 
-    final BuildRuleResolver buildRuleResolver =
-        new SingleThreadedBuildRuleResolver(
-            TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    final SourcePathResolver sourcePathResolver =
+    BuildRuleResolver buildRuleResolver = new TestActionGraphBuilder();
+    SourcePathResolver sourcePathResolver =
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(buildRuleResolver));
     IjLibraryFactoryResolver ijLibraryFactoryResolver =
         new IjLibraryFactoryResolver() {
